build: add test module export for JUnit