@@ -63,7 +63,8 @@ test {
     jvmArgs = [
             '--add-opens', "$moduleName/edu.kit.rose=org.testfx.junit5",
             '--add-opens', "$moduleName/edu.kit.rose.view.panel.segmentbox=org.testfx.junit5",
-            '--add-opens', 'javafx.graphics/com.sun.javafx.application=org.testfx'
+            '--add-opens', "javafx.graphics/com.sun.javafx.application=org.testfx",
+            '--add-exports', "$moduleName/edu.kit.rose=org.junit.platform.engine"
     ]
     finalizedBy jacocoTestReport
 }
